# MAVSDK

./: .clang-format  .dockerignore  .doxygen  .gitignore  .gitlab-ci.yml  .gitmodules  .ignore  .mailmap  .organizationmap  .travis.yml  .ycm_extra_conf.py  AUTHORS.md  CMakeLists.txt  CrossCompile-iOS.cmake  Dockerfile  DronecodeSDKConfig.cmake.in  Jenkinsfile  Jenkinsfile-Mac  LICENSE.md  MAVSDKConfig.cmake.in  Makefile  README  README.md  action.proto  appveyor.yml  astylerc  autogenerate_plugin_container.cmake  build_install.sh  check-version-tag.sh  check_release.sh  ci-git-release.sh  component_type.h  create_deb.sh  create_packages.sh  fix_style.sh  generate_docs.sh  generate_markdown_from_doxygen_xml.py  generate_pybind_definition.py  iOS.cmake  log.cpp  (+22 more)
backend/src/: CMakeLists.txt  backend.cpp  backend.h  backend_api.cpp  backend_api.h  connection_initiator.h  dronecode_sdk_server.cpp  dronecore_server.cpp  grpc_server.cpp  grpc_server.h  module.modulemap
backend/test/: CMakeLists.txt  action_service_impl_test.cpp  backend_main.cpp  camera_service_impl_test.cpp  connection_initiator_test.cpp  core_service_impl_test.cpp  mission_service_impl_test.cpp  offboard_service_impl_test.cpp  telemetry_service_impl_test.cpp
c/src/: CMakeLists.txt  cmavsdkConfig.cmake.in  plugins_generated.cmake
core/: CMakeLists.txt  any.h  any_test.cpp  call_every_handler.cpp  call_every_handler.h  call_every_handler_test.cpp  cli_arg.cpp  cli_arg.h  cli_arg_test.cpp  connection.cpp  connection.h  connection.h.autosave  connection_impl.cpp  connection_impl.h  connection_result.h  core.proto  curl_include.h  curl_test.cpp  curl_wrapper.cpp  curl_wrapper.h  curl_wrapper_types.h  device.cpp  device.h  device_impl.cpp  device_impl.h  device_plugin_container.cpp.in  download_manager.cpp  download_manager.h  dronecode_sdk.cpp  dronecode_sdk.h  dronecode_sdk_impl.cpp  dronecode_sdk_impl.h  dronecore.cpp  dronecore.h  dronecore_impl.cpp  dronecore_impl.cpp.autosave  dronecore_impl.h  dronelink.cpp  dronelink.i  dronelink_impl.cpp  (+66 more)
core/include/: connection.h  dronecode_sdk.h  system.h
core/mocks/: dronecode_sdk_mock.h  dronecore_mock.h
cpp/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/cmake/: compiler_flags.cmake  static_analyzers.cmake  win-arm64-toolchain.cmake
cpp/debian/: control  copyright  libmavsdk-dev.install
cpp/docs/: package-lock.json  package.json
cpp/examples/: CMakeLists.txt
cpp/src/: CMakeLists.txt  MAVSDKConfig.cmake.in  mavsdk.pc.in  plugins.txt
cpp/templates/: grpc_server.cpp.j2  grpc_server.hpp.j2
cpp/tools/: build-with-system-deps.sh  create_packages.sh  fsanitize-ignorelist.txt  generate_docs.sh  generate_from_protos.sh  generate_markdown_from_doxygen_xml.py  grpc_server_jinja.py  multi_mavsdk_server.sh  rename-enums-to-camelcase.sh  run-docker.sh  style-ignore.txt
example/: CMakeLists.txt  calibrate.c  calibrate.cpp  camera-client.c  camera-server.c  main.cpp  mission.c  params.c  takeoff-and-land.c  takeoff-and-land.cpp  takeoff_and_land.cpp
example/battery/: CMakeLists.txt  battery.cpp
example/calibrate/: CMakeLists.txt  calibrate.cpp
example/fly_mission/: CMakeLists.txt  fly_mission.cpp  fly_mission_dronecore.cpp
example/fly_multipleDrones/: CMakeLists.txt  fly_multipleDrones.cpp
example/fly_multiple_drones/: CMakeLists.txt  fly_multiple_drones.cpp
example/fly_multiple_qgc_mission/: CMakeLists.txt  fly_multiple_qgc_mission.cpp
example/fly_qgc_mission/: CMakeLists.txt  fly_multiple_qgc_mission.cpp  fly_qgc_mission.cpp  qgroundcontrol_sample.plan
example/follow_me/: CMakeLists.txt  fake_location_provider.cpp  fake_location_provider.h  follow_me.cpp  (+1 more)
examples/: CMakeLists.txt  basic_usage.py  calibration.py  camera-client.py  camera-server.py  mission.py  params.py  takeoff_and_land.py  telemetry.py
grpc/: 0001-Makefile-fix-wrong-C-version-suffix.patch  0001-Makefile-fix-wrong-SHARED-version-suffix.patch  CMakeLists.txt  FindGRPC.cmake  README.md  ReadMe
integration_tests/: .#.#camera_settings.cpp  CMakeLists.txt  action_goto.cpp  action_hover_async.cpp  action_hover_sync.cpp  action_takeoff_and_kill.cpp  action_transition_multicopter_fixedwing.cpp  async_connect.cpp  async_connect_main.cpp  async_hover.cpp  async_hover_main.cpp  async_telemetry.cpp  async_telemetry_main.cpp  calibration.cpp  camera_format.cpp  camera_mode.cpp  camera_settings.cpp  camera_status.cpp  camera_take_photo.cpp  camera_take_photo_interval.cpp  camera_test_helpers.cpp  camera_test_helpers.h  curl.cpp  follow_me.cpp  followme_target.cpp  geofence_inclusion.cpp  gimbal.cpp  info.cpp  integration_test_helper.h  log_files.cpp  logging.cpp  mavlink_backdoor.cpp  mission.cpp  mission_cancellation.cpp  mission_change_speed.cpp  mission_raw_mission_changed.cpp  mission_rtl.cpp  mission_survey.cpp  multi_components.cpp  offboard_actuator_control_target.cpp  (+24 more)
mavsdk-python2/: CMakeLists.txt  example.py  mavsdk-python.cpp  plugin-action.cpp  plugin-calibration.cpp  plugin-camera.cpp  plugin-failure.cpp  plugin-follow_me.cpp  plugin-ftp.cpp  plugin-geofence.cpp  plugin-gimbal.cpp  plugin-info.cpp  plugin-log_files.cpp  plugin-manual_control.cpp  plugin-mission.cpp  plugin-mission_raw.cpp  plugin-mocap.cpp  plugin-offboard.cpp  plugin-param.cpp  plugin-shell.cpp  plugin-telemetry.cpp  plugin-tune.cpp
plugins/: CMakeLists.txt
src/: CMakeLists.txt  MAVSDKConfig.cmake.in  action.proto  connection.cpp  connection.h  connection_result.h  control_impl.cpp  control_impl.h  curl_include.h  device.cpp  device_impl.cpp  device_impl.h  device_plugin_container.cpp.in  device_plugin_container.h.in  dronelink.cpp  dronelink_impl.cpp  dronelink_impl.h  error_handling.cpp  file.cpp.j2  file.h.j2  global_include.cpp  global_include.h  global_include_test.cpp  http_helper.cpp  http_helper.h  info.cpp  info_impl.cpp  info_impl.h  integration_test_helper.h  locked_queue.h  math_conversions.cpp  mavlink_channels.h  mavlink_commands.cpp  mavlink_commands.h  mavlink_include.h  mavlink_parameters.cpp  mavlink_parameters.h  mavlink_receiver.cpp  mavlink_receiver.h  mavsdk.pc.in  (+20 more)
(+3854 files in other folders)
